hphp/hack/test/typecheck/nonexistent_constant.php.exp
File "nonexistent_constant.php", line 4, characters 10-23:
Unbound name: `NoSuchConstant` (a global constant) (Naming[2049])
File "nonexistent_constant.php", line 4, characters 10-23:
Unbound global constant (Typing) (Typing[4106])
