hphp/hack/test/typecheck/nonexistent_constant.php
<?hh

function foo(): mixed {
  return NoSuchConstant;
}
